--- a/transform-data.Rmd
+++ b/transform-data.Rmd
@@ -26,11 +26,16 @@ Data with fields of [occurrence core](https://rs.gbif.org/core/dwc_occurrence_20
 
 ```{r}
 # occurrence data frame spans from column 1-37, all columns beyond that belongs to measurement or fact extension
-occ_df <- data[, 1:37]
+occ_df <- data[, 1:38]
 head(occ_df)
 ```
 
 BOLD IDs are omitted for the moment because it is uncertain which field should be placed under `associatedSequences` or whether [DNA derived data extension](https://rs.gbif.org/extension/gbif/1.0/dna_derived_data_2021-07-05.xml) should be used. 
+
+```{r}
+# read measurementTypes sheet which has definition and unit for each measurmeent header
+mof_fields <- read.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vSfAaU0p3QOsyugCL72TJuHq-pH1XyWGs1A8qIFDp1ndqqehxP4a9Lnc6QGxf1g-qU1abdNHfCwUG7p/pub?gid=1377524164&single=true&output=tsv", header = TRUE, sep = "\t", check.names = FALSE)
+```
 
 ## Simple function to subset a measurementType from wide table into long measurement or fact table
 
@@ -40,20 +45,23 @@ library(tidyverse)
 #' Function to subset a measurementType from wide table to long measurement or fact table
 #'
 #' @param data The data frame which contains measurement data in wide format.
+#' @param mof_fields The data frame which contains measurement columnName of `data`, measurementType and measurementUnit
 #' @param core_id A string which is the field name of the (occurrence) core ID.
 #' @param measurement_col A string which is the field name of data frame that contains the measurement value. Will be used to populate the measurementValue field.
-#' @param measurement_type A string that defines the measurement type, Will be used to populate measurementType field.
-#' @param measurement_unit A string that states the unit of the measurement. Will be used to populate measurementValue field.
 #' @param measurement_remarks A string of measurement remark. Will be used to populate measurementRemarks field.
 #
 
-create_var_mof <- function(data = data, core_id = "occurrenceID", measurement_col, measurement_type, measurement_unit, measurement_remarks = "") {
+create_var_mof <- function(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col, measurement_remarks = "") {
   # create a measurement or fact table of a single measurement type from the data
   # subset from full dataset
   mof <- data %>% 
     # remove rows of measurement which are NULL
     filter(!is.na(!!as.symbol(measurement_col))) %>%  # !!as.symbol is required as column name is passed as string
     select(!!as.symbol(core_id), !!as.symbol(measurement_col))
+  
+  # pull measurementType and measuremntUnit from measurmentTypes sheet based on the column name
+  measurement_type <- mof_fields %>% filter(columnName == measurement_col) %>% pull(measurementType)
+  measurement_unit <- mof_fields %>% filter(columnName == measurement_col) %>% pull(measurementUnit)
   
   # create mof table (long table)
   mof_df <- data.frame(
@@ -73,9 +81,9 @@ create_var_mof <- function(data = data, core_id = "occurrenceID", measurement_co
 Arm length, disc radius and arm to disc ratio
 
 ```{r}
-armLength <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "Arm length_R_(cm)", measurement_type = "Arm length_R_(cm)", measurement_unit = "cm", measurement_remarks = "")
-discRadius <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "Disc radius_r_(cm)", measurement_type = "Disc radius_r_(cm)", measurement_unit = "cm", measurement_remarks = "")
-rRRatio <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "R_r_ratio", measurement_type = "R_r_ratio", measurement_unit = "", measurement_remarks = "")
+armLength <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "Arm_length_R_(cm)", measurement_remarks = "")
+discRadius <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "Disc_radius_r_(cm)", measurement_remarks = "")
+rRRatio <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "R_r_ratio", measurement_remarks = "")
 ```
 
 
@@ -84,18 +92,18 @@ Delta C13, N15, S34 of tegument and podia
 ```{r}
 # d13C
 
-d13C_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d13C_tegument", measurement_type = "d13C", measurement_unit = "", measurement_remarks = "tegument")
-d13C_podia<- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d13C_podia", measurement_type = "d13C", measurement_unit = "", measurement_remarks = "podia")
+d13C_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d13C_tegument", measurement_remarks = "tegument")
+d13C_podia<- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d13C_podia", measurement_remarks = "podia")
 
 # d15N
 
-d15N_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d15N_tegument", measurement_type = "d15N", measurement_unit = "", measurement_remarks = "tegument")
-d15N_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d15N_podia", measurement_type = "d15N", measurement_unit = "", measurement_remarks = "podia")
+d15N_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d15N_tegument", measurement_remarks = "tegument")
+d15N_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d15N_podia", measurement_remarks = "podia")
 
 # d34S
 
-d34S_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d34S_tegument", measurement_type = "d34S", measurement_unit = "", measurement_remarks = "tegument")
-d34S_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "d34S_podia", measurement_type = "d34S", measurement_unit = "", measurement_remarks = "podia")
+d34S_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d34S_tegument", measurement_remarks = "tegument")
+d34S_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "d34S_podia", measurement_remarks = "podia")
 
 ```
 
@@ -104,26 +112,26 @@ d34S_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_
 ```{r}
 # %C
 
-percentage_C_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%C_tegument", measurement_type = "%C", measurement_unit = "", measurement_remarks = "tegument")
-percentage_C_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%C_podia", measurement_type = "%C", measurement_unit = "", measurement_remarks = "podia")
+percentage_C_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%C_tegument", measurement_remarks = "tegument")
+percentage_C_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%C_podia", measurement_remarks = "podia")
 
 # %N 
 
-percentage_N_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%N_tegument", measurement_type = "%N", measurement_unit = "", measurement_remarks = "tegument")
-percentage_N_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%N_podia", measurement_type = "%N", measurement_unit = "", measurement_remarks = "podia")
+percentage_N_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%N_tegument", measurement_remarks = "tegument")
+percentage_N_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%N_podia", measurement_remarks = "podia")
 
 
 # %S
 
-percentage_S_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%S_tegument", measurement_type = "%S", measurement_unit = "", measurement_remarks = "tegument")
-percentage_S_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "%S_podia", measurement_type = "%S", measurement_unit = "", measurement_remarks = "podia")
+percentage_S_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%S_tegument",  measurement_remarks = "tegument")
+percentage_S_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "%S_podia", measurement_remarks = "podia")
 ```
 
 C/N ratio of tegument and podia
 
 ```{r}
-ratio_CN_tegument <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "C/N_tegument", measurement_type = "Ratio_C/N", measurement_unit = "", measurement_remarks = "tegument")
-ratio_CN_podia <- create_var_mof(data = data, core_id = "occurrenceID", measurement_col = "C_N_podia", measurement_type = "Ratio_C/N", measurement_unit = "", measurement_remarks = "podia")
+ratio_CN_tegument <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "C/N_tegument", measurement_remarks = "tegument")
+ratio_CN_podia <- create_var_mof(data = data, mof_fields = mof_fields, core_id = "occurrenceID", measurement_col = "C/N_podia", measurement_remarks = "podia")
 ```
 
 
@@ -165,6 +173,6 @@ outfile_dir <- here("data/processed")
 occ_file <- file.path(outfile_dir, "occurrence.txt")
 mof_file <- file.path(outfile_dir, "measurementOrFact.txt")
 
-write_tsv(occ_df, file = occ_file, na = "")
-write_tsv(mof_df, file = mof_file, na = "")
+write_tsv(occ_df, occ_file, na = "")
+write_tsv(mof_df, mof_file, na = "")
 ```
